css/_mobile.scss
body {
    background-color: black;
  }

header {
  height: 95px;
  border-bottom: 10px solid $primary-color;
  position: fixed;
}
  /*Button här under*/
button {
  width: 35px;
  height: 35px;
  background: transparent;
  border: 0;
  position: fixed;
  left: 20px; /*right efter video*/
  top: 20px;
  z-index: 5; /*skulle även funka med 1 i detta fall*/
  pointer-events: none; /*så ej registrerar några musklick*/

  span {
    display: block;
    width: 25px;
    height: 3px;
    background-color: rgb(255, 242, 54); /*Enligt brief*/
    border-radius: 6px;
    margin-bottom: 4px;
  }

}

/*TESTAR */
/*Tog bort input, nu klass!*/
.hamburger {
  position: fixed;
  top: 20px;
  left: 20px;/*right*/
  z-index: 4;
  width: 35px;
  height: 35px;
  opacity: 0;
}

input:checked {
  & + .menu {
    button {
      span {
        position: absolute;
        transition: all 0.3s ease-in-out;
      }
      span:nth-child(2) {
        opacity: 0;
      }
      span:nth-child(1) {
        transform: rotate(45deg);
      }
      span:nth-child(3) {
        transform: rotate(-45deg);
      }
    }
    & nav { 
      /*display: block; */
      visibility: visible;
      opacity: 1;
    }
  }
}


nav {
  position: fixed;
  top: 0;
  left: 0;
  background-color: #C347FF;
  width: 100vw; /*Hela vägen ut, hela vägen ner*/
  height: 100vh;
  /*opacity: 0;*/
  transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
  visibility: hidden;
  z-index: 2;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-evenly;
  text-align: center;
  

  li {
    font-family: 'Jockey One';
    text-transform: uppercase;
    color: rgb(255, 255, 255);
    font-size: 3rem;
  }
}


header {
  display: flex;
  width: 100vw;
  justify-content: center;
  background-color: rgb(0, 0, 0); /*Göra om till variabler senare*/
  // padding-bottom: 16px;

   h1{
    
     margin-top: 20px;
    //  padding-bottom: 20px;
    //  padding: 10px 45px; /*Innan demo*/
     text-transform:uppercase;
     color: rgb(255, 255, 255);
     font-size: clamp(1rem, 8vw, 2.5rem);
     font-family: 'Jockey One';
     
   }
}

.page-title {
  font-family: $primary-font, sans-serif;
  text-transform: uppercase;
  position: relative;
  min-width: 300px;
  min-height: 300px;
  z-index: -1; /*Tahini Drizz Chick*/

  h2 {
    position: absolute;
    margin: 10;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .drizzle, .chickpeas {
    position: absolute;
  }

  .drizzle {
    color: $third-color;
    top: -18px;
    right: 0;
    font-size: 2.8rem;
  }

  .tahini {
    color: $secondary-color;
    font-size: 7rem;
  }

  .chickpeas {
    color: $primary-color;
    left: 0;
    bottom: -14px;
    font-size: 2.95rem;
    z-index: -1;

  }
}



.page1-img {
  display: flex;
  justify-content: center;
  img {
    max-width: 60%;
    height: auto;
  }
}


p {
  // font-size: 1.25rem;
  color: white;
  .text {
    display: flex;
    justify-content: center;
    text-align: center;
    
  }
}

.menu-link {
  font-size: 25px;
}

.bottom {
  text-align: center;
    a {
      // font-size: 1.25rem;
      font-family: 'Jockey One';
      color: white;
      text-transform: uppercase;
      text-decoration: none;
    } /*PILEN?*/ 
}


.page2-images {
  display: flex;
  justify-content: center;
  margin-top: 10px;
  .p2-1, .p2 {
    width: 30%;
    height: auto;
  }
  .p2-middle {
    width: 30%;
    height: auto;
    display: flex;
    align-items: stretch;
  }

}
/*Jag har valt att presentera min meny på detta sätt,
eftersom det brukar se ut så när man tittar 
på menyer från mobilen. Jag tycker att det blir tydligt.*/
.menu-items {
  text-align: center;
  color: white;

  h3 {
    font-family: 'Jockey One';
    text-transform: uppercase;
    font-size: 2rem;
    display: inline-block;
    margin: auto 5px;

  }

  .tag {
    color: black;
    display: inline-block;
    transform: rotate(-3deg);
    // z-index: -5;
    // position: relative;
    
    

    span {
      font-family: 'Courier Prime';
      text-transform: uppercase;
      
    }

      .new {
        background-color: #C347FF;
        transform: rotate(6deg);
        padding-inline: 15px;
        display: inline-block;
        margin-inline: 5px;
      }
      .veg {
        background-color: #00F500;
        transform: rotate(0deg);
        padding-inline: 15px;
        display: inline-block;
        margin-inline: 5px;
      }
      .pop {
        background-color: yellow;
        transform: rotate(0deg);
        padding-inline: 2px;
        display: inline-block;
        margin-inline: 5px;
      }   
  }

  .about {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 1.45rem;
  }

  .price {
    display: block;
    font-family: 'Jockey One';
    font-size: 2rem;
    margin-bottom: 20px;
  }
}

.page3 {
  border:10px solid $secondary-color;
  font-family: $primary-font;
  text-transform: uppercase;
  color: white;
  padding: 0 30px;

  .contact {
    h4 {
      font-size: 3rem;
    
    }
    form {
      display: flex;
      flex-direction: column;
      font-size: 2rem;
      // padding-left: 20px;

      label {
        margin-bottom: 15px;
        display: flex;
        justify-content: space-between;
        align-items: center;

        span {
          flex: 1;
          max-width: 150px;
        }
      }

      input {
        border-radius: 13px;
        flex: 2;
      }

      .buttons {
        margin: 10px 0;
        // background-color: #C347FF;

        .form-button {
          font-family: $primary-font;
          text-transform: uppercase;
          color: black;
          padding: 0 45px;
        }
        .cancel-button {
          background-color: $third-color;
        }
        .request-button {
          background-color: $primary-color;
        }
      }
    }
    
  }
}


.cookies {
  background-color: #ac77ff;
  position: fixed;
  z-index: 999; /*Överst?*/
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-inline: 8px;
  padding-block: 16px;


}

